[package]
name = "yew-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17.0"
inject = "0.1.3"
wasm-bindgen = "0.2.87"
itertools = "0.11.0"

log = "0.4.20"
wasm-logger = "0.2.0"

chrono = "0.4.26"
gloo-utils = "0.2.0"
markdown-to-html = "0.1.3"
